# wow-server-check

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-wow-server-check.md
docs/superpowers/specs/: 2026-03-17-wow-server-check-design.md
scripts/: probe_endpoints.py
src/wow_server_check/: checker.py  cli.py  notifier.py
tests/: test_checker.py  test_cli.py  test_notifier.py
