[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wow-server-check"
version = "0.1.0"
description = "CLI tool that alerts you when WoW servers come back online after maintenance"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
wow-server-check = "wow_server_check.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
